--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
         <h4>Experience</h4>
         <div class="experience-container">
             <div class="experience-card">
+                <h3>Rutakshi Technologies Private Limited</h3>
+                <h5>July 2022 – December 2022</h5>
+                <p>Developed mobile and web applications using Flutter, React.js, and Node.js, improving user engagement by 30% and operational efficiency by 25%.</p>
+            </div>
+            <div class="experience-card">
                 <h3>Shiash Info Solutions Private Limited</h3>
-                <h5>Sept 2022 – Dec 2022</h5>
+                <h5>March 2022 – May 2022</h5>
                 <p>Optimized Java backend services, boosting performance by 20% and MySQL speed by 15%. Developed RESTful APIs with Spring Boot, integrated with MySQL, and deployed on AWS and Azure. Automated CI/CD pipelines for efficient testing and deployment in Agile teams.</p>
                 <!-- <a href="#" class="project-link">View Project</a> -->
             </div>
             <div class="experience-card">
-                <h3>Zemoso Technologies</h3>
-                <h5>Mar 2022 – Aug 2022</h5>
-                <p>Built a BlinkList clone with Java and Angular, featuring user authentication and book cataloging. Optimized APIs for 30% faster data retrieval and secured with JWT/OAuth2. Deployed using CI/CD, Docker, and Kubernetes for scalability.</p>
-            </div>
-            <div class="experience-card">
                 <h3>Gleem Technologies</h3>
-                <h5>Nov 2021 – Feb 2022</h5>
+                <h5>October 2021 – January 2022</h5>
                 <p>Assisted in migrating Java apps to microservices for better scalability. Collaborated on architecture implementation, testing, and Docker adoption for streamlined deployment.</p>
                 <!-- <a href="#" class="project-link">View Project</a> -->
             </div>
